--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,11 @@
         <activity android:name=".vender.VendorUpdateActivity" />
         <activity android:name=".vender.VendorInsertActivity" />
         <activity android:name=".vender.VendorRetriveActivity" />
-        <activity android:name=".vender.VendorDeleteActivity"></activity>
+        <activity android:name=".vender.VendorDeleteActivity" />
+        <activity android:name=".shop.ShopInsertActivity" />
+        <activity android:name=".shop.ShopUpdateActivity" />
+        <activity android:name=".shop.ShopRetriveActivity" />
+        <activity android:name=".shop.ShopDeleteActivity"></activity>
     </application>
 
 </manifest>
